--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,7 @@
 @import '~antd/dist/antd.css';
 
-.App {
-  display: flex;
-}
-
 .Main {
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
 }
 
 h1 {
